# liquer-prototyping

./: callable_deserialization_test.py  callable_serialization_test.py  path.py  test_parser.py  test_path.py  tornado_test.py
axum-test/: Cargo.toml
axum-test/src/: main.rs  metadata.rs  parse.rs  query.rs  store.rs
datafusion-tests/: test1.py
edit/liquer-gui-edit-prototype/: README.md  package-lock.json  package.json
edit/liquer-gui-edit-prototype/src/: App.vue
edit/liquer-gui-edit-prototype/src/components/: HelloWorld.vue
edit/liquer-gui-edit-prototype/src/plugins/: vuetify.js
liquer-demo/: config.yaml  requirements.txt  service.py
liquer-md/: markdowntest.py
liquer-rust-prototype/: Cargo.toml
liquer-rust-prototype/src/: lib.rs
liquer-rust-prototype_raw/: Cargo.toml  wasmer_test.py  wasmtime_test.py
liquer-rust-prototype_raw/src/: main.rs
liquer-webapp/liquer-gui/: README.md  package-lock.json  package.json  server.py  vue.config.js
liquer-webapp/liquer-gui/src/: App.vue  main.js
liquer-webapp/liquer-gui/src/components/: Commands.vue  Content.vue  StatusBar.vue
liquers-dj/: Cargo.toml  index.html  plotlytest.html  test1.txt
liquers-dj-egui/: Cargo.toml  index.html  rust-toolchain
liquers-dj-egui/assets/: sw.js
liquers-dj-egui/src/: app.rs  main.rs
liquers-dj/src/: commands.rs  main.rs  store.rs  value.rs
liquers-leptos-test/: Cargo.toml  test.txt
liquers-leptos-test/src/: main.rs
liquers-leptos-test2/: Cargo.toml  Trunk.toml
liquers-leptos-test2/src/: main.rs  value.rs
liquers-py/: Cargo.toml
liquers-py/liquers-core/: Cargo.toml
liquers-py/liquers-core/src/: cache.rs  command_metadata.rs  command_metadata_registry.rs  command_registry.rs  commands.rs  context.rs  error.rs  interpreter.rs  lib.rs  metadata.rs  parse.rs  plan.rs  query.rs  state.rs  store.rs  value.rs
liquers-py/liquers-py/: Cargo.toml  pyproject.toml
liquers-py/liquers-py/src/: cache.rs  lib.rs  metadata.rs  parse.rs  store.rs
liquers-py/liquers-py/tests/: test_parser.py
liquers-py/liquers-server/: Cargo.toml
liquers-py/liquers-server/src/: main.rs
liquers-py/liquers-wasm/: Cargo.toml
liquers-py/liquers-wasm/src/: lib.rs
pyodide-test/: test.html
queue/: callbacktest.py  callbacktest2.py  callbacktest3.py  callbacktest4.py  design.py  design1.py  design2.py  design3.py  design4.py  design5.py  lifecycle.md  ndesign1.py  ndesign2.py  wtest1.py
queue/tests/: mp.py  mp1.py  mp2.py  mp3.py  mp4.py  mp5.py
rsliquer/: Cargo.toml
rsliquer/src/: action_registry.rs  error.rs  main.rs  parse.rs  query.rs  value.rs
rsliquer2/: Cargo.toml
rsliquer2/src/: action_registry.rs  cache.rs  command.rs  commands.rs  error.rs  main.rs  metadata.rs  parse.rs  plan.rs  query.rs  state.rs  value.rs
testjse/: setup.py
