[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = "1.0.181"
serde_derive = "1.0.181"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
