[package]
name = "liquers-dj"
version = "0.1.0"
edition = "2018"

[dependencies]
liquers-core={git="https://github.com/orest-d/liquers.git"}
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
#polars-core = "0.38"
#polars-lazy = "*"
#getrandom = { version = "*", features = ["js"] }
polars = { version = "0.38.2", default-features = false, features = ["csv", "fmt_no_tty"] }
plotly = { version = "0.8.4", features = ["wasm"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"
