[package]
name = "liquers-dj"
version = "0.1.0"
edition = "2018"

[dependencies]
liquers-core={git="https://github.com/orest-d/liquers.git"}
serde = { version = "1.0", features = ["derive"] }
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"
