[package]
name = "rsliquer"
version = "0.1.0"
authors = ["Orest Dubay <orest3.dubay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.7"
nom = "7.1.3"
nom_locate = "4.1.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
serde_yaml = "0.9.17"
itertools = "0.10.5"
